# notebooklm-orchestrator

./: .claude.md  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SOP.md
docs/outputs_template/: README.md
prompts/: analysis.md
prompts/packs/deliverables/: 00_deck_story.md  01_infographic_spec.md
prompts/packs/implementation/: 00_architecture.md  01_checklist.md
prompts/packs/strategy/: 00_overview.md  01_practices_taxonomy.md  02_risks_and_failure_modes.md
spec/: 2026-03-04_000_index.md  2026-03-04_005_init.md  2026-03-04_010_core.md  2026-03-04_020_cli.md  2026-03-04_030_notebooklm.md  2026-03-04_040_youtube.md  2026-03-04_090_testing_ops.md  2026-03-06_050_intent_prompt_packs.md  2026-03-07_070_curation_review.md  2026-03-07_080_quality_score.md  2026-03-07_085_handoff_canva_slides.md
src/notebooklm_orchestrator/: cli.py  notebooklm_cli.py  sources.py
tests/: test_cli_import.py  test_handoff.py  test_intent_packs.py  test_live.py  test_quality_score.py  test_review.py  test_run.py  test_sources.py
