[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-orchestrator"
version = "0.0.0"
description = "CLI-first orchestrator for curating sources and generating deliverables via NotebookLM."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Emmanuel Gonzalez"}]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
nlm-orch = "notebooklm_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires real NotebookLM auth and network; never run in CI",
]
